@@ -36,6 +36,8 @@
 #include "IECoreMaya/FromMayaObjectConverter.h"
 #include "IECoreMaya/FromMayaMeshConverter.h"
 #include "IECoreMaya/MeshParameterHandler.h"
+#include "IECoreMaya/MayaTypeIds.h"
+#include "IECoreMaya/ObjectData.h"
 
 #include "IECore/TypedPrimitiveParameter.h"
 #include "IECore/MeshPrimitive.h"
@@ -65,7 +67,12 @@ MStatus MeshParameterHandler::doUpdate( IECore::ConstParameterPtr parameter, MPl
 	}
 
 	fnGAttr.addAccept( MFnData::kMesh );
-
+	// maya has an odd behaviour whereby a generic attribute with only one accepted datatype will
+	// transform itself into a typed attribute after file save and load. here we add an accept
+	// for a second dummy datatype to ensure that the attribute will still be a generic attribute
+	// when saved and loaded.
+	fnGAttr.addAccept( DummyDataId );
+	
 	return finishUpdating( parameter, plug );
 }
 
